tools/tests/errors/surf_num_02.ki
# Float floor-division by a zero divisor must throw.
discard 1.0 // 0.0
